# kalkan-xml-signer

./: LICENSE  README.md  pyproject.toml
kalkan_xml_signer/: __init__.py  signer.py
kalkan_xml_signer/certs/: __init__.py  install_certs.sh  nca_gost_2022.pem  root_gost_2022.pem
src/kalkan_xml_signer/: __init__.py
