[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalkan-xml-signer"
version = "0.1.0"
description = "XML signing using KalkanCrypt library (Kazakhstan PKI)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sagynysh Zhaksylyk", email = "sagynysh.jaksylyk@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/sagynysh95/kalkan-xml-signer"
Repository = "https://github.com/sagynysh95/kalkan-xml-signer"

[project.scripts]
kalkan-install-certs = "kalkan_xml_signer.certs:install_certs"

[tool.hatch.build.targets.wheel]
packages = ["kalkan_xml_signer"]
